src/objects/Dealer_Locator__c.object
<CustomObject>
    <description>Contains records for locating a dealer based on Postal or Business Unit criteria.</description>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alliance</fullName>
                </value>
                <value>
                    <fullName>Allmakes</fullName>
                </value>
                <value>
                    <fullName>Freightliner</fullName>
                </value>
                <value>
                    <fullName>Fuso</fullName>
                </value>
                <value>
                    <fullName>MB Bus</fullName>
                </value>
                <value>
                    <fullName>MB Cars</fullName>
                </value>
                <value>
                    <fullName>MBFS Cars</fullName>
                </value>
                <value>
                    <fullName>MBFS Trucks</fullName>
                </value>
                <value>
                    <fullName>MB Trucks</fullName>
                </value>
                <value>
                    <fullName>MB Vans</fullName>
                </value>
                <value>
                    <fullName>SelecTrucks</fullName>
                </value>
                <value>
                    <fullName>smart</fullName>
                </value>
                <value>
                    <fullName>Special Vehicles</fullName>
                </value>
                <value>
                    <fullName>Trucks</fullName>
                </value>
                <value>
                    <fullName>Unimog</fullName>
                </value>
                <value>
                    <fullName>Vans</fullName>
                </value>
                <value>
                    <fullName>Western Star</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delivery Area</fullName>
                </value>
                <value>
                    <fullName>LVR</fullName>
                </value>
                <value>
                    <fullName>Post Office Boxes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dealer Locators</relationshipLabel>
        <relationshipName>Dealer_Locators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Number__c</fullName>
        <formula>Dealer_Name__r.SF_Dealer_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Usage_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to identify dealer to be allocated next.</description>
        <label>Last Usage Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, &apos;AU&apos;) ,&apos;AU&apos;, 
		IF(ISPICKVAL($User.Market__c, &apos;CN&apos;), &apos;CN&apos;, 
		IF(ISPICKVAL($User.Market__c, &apos;JP&apos;), &apos;JP&apos;,&apos;NA&apos;)))</defaultValue>
        <description>For JP users set to JP</description>
        <label>Market Discriminator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metro_Rural__c</fullName>
        <label>Metro/Rural</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Metro</fullName>
                </value>
                <value>
                    <fullName>Provincial</fullName>
                </value>
                <value>
                    <fullName>Rural</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offered_Service__c</fullName>
        <label>Offered Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Auto Body Repairer</fullName>
                </value>
                <value>
                    <fullName>Parts</fullName>
                </value>
                <value>
                    <fullName>Pre-Owned</fullName>
                </value>
                <value>
                    <fullName>Finance &amp; Insurance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMA__c</fullName>
        <label>PMA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALICE SPRINGS</fullName>
                </value>
                <value>
                    <fullName>ANGLE PARK</fullName>
                </value>
                <value>
                    <fullName>BALLARAT</fullName>
                </value>
                <value>
                    <fullName>BAYSIDE</fullName>
                </value>
                <value>
                    <fullName>BENDIGO</fullName>
                </value>
                <value>
                    <fullName>BENTLEY</fullName>
                </value>
                <value>
                    <fullName>BLACKTOWN</fullName>
                </value>
                <value>
                    <fullName>BUNBURY</fullName>
                </value>
                <value>
                    <fullName>BUNDABERG</fullName>
                </value>
                <value>
                    <fullName>CAIRNS</fullName>
                </value>
                <value>
                    <fullName>CAMPBELLTOWN</fullName>
                </value>
                <value>
                    <fullName>CANBERRA</fullName>
                </value>
                <value>
                    <fullName>COFFS HARBOUR</fullName>
                </value>
                <value>
                    <fullName>DANDENONG</fullName>
                </value>
                <value>
                    <fullName>DARWIN</fullName>
                </value>
                <value>
                    <fullName>DUBBO</fullName>
                </value>
                <value>
                    <fullName>FERNTREE GULLY</fullName>
                </value>
                <value>
                    <fullName>GEELONG</fullName>
                </value>
                <value>
                    <fullName>GORDON</fullName>
                </value>
                <value>
                    <fullName>GOSFORD</fullName>
                </value>
                <value>
                    <fullName>HOBART</fullName>
                </value>
                <value>
                    <fullName>ILLAWARRA</fullName>
                </value>
                <value>
                    <fullName>LAUNCESTON</fullName>
                </value>
                <value>
                    <fullName>LISMORE</fullName>
                </value>
                <value>
                    <fullName>MACKAY</fullName>
                </value>
                <value>
                    <fullName>MELBOURNE</fullName>
                </value>
                <value>
                    <fullName>MILDURA</fullName>
                </value>
                <value>
                    <fullName>MIRANDA</fullName>
                </value>
                <value>
                    <fullName>MONA VALE</fullName>
                </value>
                <value>
                    <fullName>MORNINGTON</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Code__c</fullName>
        <label>Post Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Eastern Region</fullName>
                </value>
                <value>
                    <fullName>Zone 1</fullName>
                </value>
                <value>
                    <fullName>Zone 2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>STHN</fullName>
                </value>
                <value>
                    <fullName>NTHN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sequence_No__c</fullName>
        <description>Use sequence No among dealers which has same territory zip-code.</description>
        <label>Sequence No</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACT</fullName>
                </value>
                <value>
                    <fullName>NSW</fullName>
                </value>
                <value>
                    <fullName>NT</fullName>
                </value>
                <value>
                    <fullName>QLD</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
                <value>
                    <fullName>TAS</fullName>
                </value>
                <value>
                    <fullName>VIC</fullName>
                </value>
                <value>
                    <fullName>WA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suburb__c</fullName>
        <label>Suburb</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Dealer Locator</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Dealer Locator</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealer Locators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>